# tennis-coach

./: .gitignore  README.md  TennisCoachAnalysis.py  TennisCoachLocalAnalysis.py  pyproject.toml  run_coach_pipeline.py
desktop/: README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/scripts/: build_engine.py  package.py  renderer-flow.test.mjs
desktop/src/main/: aiAnalysisBridge.ts  ffmpegBridge.ts  main.ts  preload.ts  processControl.ts  pythonBridge.ts  pythonRuntime.ts
desktop/src/renderer/: App.tsx  analysisFlow.ts  batchFlow.ts  evidenceFormatting.ts  index.html  index.tsx  markdown.tsx  types.d.ts
desktop/src/renderer/components/: AIAnalysisScreen.tsx  AnalysisCourtVisual.tsx  AnalysisProgressPanel.tsx  AnalysisScreen.tsx  BatchVideoList.tsx  MatchMap.tsx  RallyQueue.tsx  VideoPlayer.tsx  WelcomeScreen.tsx
desktop/src/renderer/i18n/: LanguageProvider.tsx  copy.ts  index.ts  language.ts
desktop/src/renderer/state/: AppState.tsx
desktop/src/renderer/styles/: global.css  theme.css
desktop/src/renderer/viewModels/: flowCopy.ts
desktop/src/shared/: analysis.ts
examples/: analysis.json  sample_audio_report.json  sample_audio_stats.json  sample_ball_stats.json  sample_report.json
examples/internal/: legacy_segments.json  legacy_stats.json  report.json  segments.json
llm_process/: README.md  __init__.py  azure.yaml
llm_process/src/: __init__.py
llm_process/src/tennis-analysis-agent/: .env  main.py
llm_process/src/tennis_analysis_agent/: .env  __init__.py  analysis_prompt.py  main.py
llm_process/src/tennis_analysis_agent/data/: reports.json  video-analysis-sample.json
tennis_coach/: __init__.py  video_extraction.py
tennis_coach/vision/: __init__.py  court.py  motion.py  player_observation.py
tests/: test_audio.py  test_local_analysis.py  test_remaining_analysis.py  test_run_coach_pipeline.py  test_shot_analysis.py  test_video_extraction.py
validation/baseline-30/: annotations.json  metrics.json
video_extraction/: __init__.py  ball_annotations.py  cli.py  court_projection.py  local_analysis.py  outcomes.py  shot_analysis.py  statistics.py  target_player.py
video_extraction/audio/: __init__.py  ffmpeg.py  hits.py  pipeline.py  segmentation.py
video_extraction/vision/: __init__.py  ball_tracking.py  motion.py  onnx_inference.py  player_observation.py  pose.py  yolox_ball.py
video_extraction/vision/models/: MODEL_INFO.txt
