[project]
name = "tennis-coach"
version = "0.1.0"
description = "Local-first tennis video signal extraction and coaching analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
  "numpy>=1.24,<2.0",
  "opencv-python>=4.8,<5.0",
  "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
tennis-coach-extract = "video_extraction.cli:main"
tennis-coach-ball-frames = "video_extraction.ball_annotations:extract_main"
tennis-coach-ball-annotate = "video_extraction.ball_annotations:annotate_main"
tennis-coach-ball-evaluate = "video_extraction.ball_annotations:evaluate_main"
tennis-coach-ball-track = "video_extraction.vision.ball_tracking:main"
tennis-coach-ball-validate = "video_extraction.ball_annotations:validate_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
