[project]
name = "tennis-coach"
version = "0.1.0"
description = "Local-first tennis video signal extraction and coaching analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
  "librosa>=0.10,<1.0",
  "numpy>=1.24,<2.0",
  "opencv-python>=4.8,<5.0",
  "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
gpu = [
  "onnxruntime-gpu>=1.18,<2.0",
]
pose = [
  "mediapipe>=0.10,<1.0",
]
foundry-local = [
  "foundry-local-sdk>=1.2,<2.0; platform_system != 'Windows'",
  "foundry-local-sdk-winml>=1.2,<2.0; platform_system == 'Windows'",
]
test = [
  "pytest>=8,<9",
]

[project.scripts]
tennis-coach-extract = "video_extraction.cli:main"
tennis-coach-stats = "video_extraction.statistics:main"
tennis-coach-analyze-local = "video_extraction.local_analysis:main"
tennis-coach-ball-frames = "video_extraction.ball_annotations:extract_main"
tennis-coach-ball-annotate = "video_extraction.ball_annotations:annotate_main"
tennis-coach-ball-evaluate = "video_extraction.ball_annotations:evaluate_main"
tennis-coach-ball-track = "video_extraction.vision.ball_tracking:main"
tennis-coach-ball-validate = "video_extraction.ball_annotations:validate_main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["video_extraction*", "llm_process*"]

[tool.poetry]
name = "tennis-coach"
version = "0.1.0"
description = "Local-first tennis video signal extraction and coaching analysis"
readme = "README.md"
authors = ["Tennis Coach Team <noreply@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
librosa = ">=0.10,<1.0"
numpy = ">=1.24,<2.0"
opencv-python = ">=4.8,<5.0"
scipy = ">=1.10,<2.0"
agent-framework-foundry = "*"
agent-framework-foundry-hosting = ">=1.0.0a260630"
azure-identity = "*"
python-dotenv = "*"
pydantic = "*"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
